--- a/Csv_to_Excel/index.html
+++ b/Csv_to_Excel/index.html
@@ -21,6 +21,14 @@
             <li><a href="features.html"><i class="fas fa-star"></i> Features</a></li>
             <li><a href="about.html"><i class="fas fa-info-circle"></i> About</a></li>
             <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle"><i class="fas fa-shield-alt"></i> Legal <i
+                        class="fas fa-chevron-down"></i></a>
+                <ul class="dropdown-menu">
+                    <li><a href="terms.html"><i class="fas fa-gavel"></i> Terms of Service</a></li>
+                    <li><a href="privacy.html"><i class="fas fa-user-shield"></i> Privacy Policy</a></li>
+                </ul>
+            </li>
         </ul>
         <div class="hamburger">
             <span></span>
@@ -174,6 +182,12 @@
         </div>
         <div class="footer-bottom">
             <p>&copy; 2024 CSV2XLSX Converter. All rights reserved.</p>
+
+            <h3>Legal</h3>
+            <ul>
+                <li><a href="terms.html">Terms of Service</a></li>
+                <li><a href="privacy.html">Privacy Policy</a></li>
+            </ul>
         </div>
     </footer>
 
