--- a/Csv_to_Excel/index.html
+++ b/Csv_to_Excel/index.html
@@ -174,9 +174,9 @@
                 <h3>Connect With Us</h3>
                 <div class="social-links">
                     <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                    <a href="#"><i class="fab fa-github"></i></a>
+                    <a href="#"><i class="fab fa-x"></i></a>
+                    <a href="linkedin.com/in/abdul-samad-49b3aa294"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/AbdulSamad001122"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </div>
@@ -185,8 +185,8 @@
 
             <h3>Legal</h3>
             <ul>
-                <li><a href="terms.html">Terms of Service</a></li>
-                <li><a href="privacy.html">Privacy Policy</a></li>
+                <li><a style="color: whitesmoke;" href="terms.html">Terms of Service</a></li>
+                <li><a style="color: whitesmoke;" href="privacy.html">Privacy Policy</a></li>
             </ul>
         </div>
     </footer>
